--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "muntaser-muttaqi-cv",
+  "name": "yasin-mahmud-ifti-cv",
   "private": true,
   "version": "0.0.0",
   "type": "module",
